tests/interpreter/for-loop-expr-error.stderr
error: identifier 's' is not defined
 --> $DIR/for-loop-expr-error.lox:1:11
  |
1 | for ch in s {}
  |           ^
